# libdictenstein

./: .gitignore  .pgmcp.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  proptest.toml
.cargo/: config.toml  config.toml.local-example
.config/: nextest.toml
.github/workflows/: ci.yml  coverage.yml
benches/: adaptive_pool_benchmarks.rs  batch_wal_benchmarks.rs  concurrent_read_vs_flush_benchmarks.rs  epoch_benchmarks.rs  eviction_benchmarks.rs  group_commit_benchmarks.rs  io_backend_benchmarks.rs  io_uring_comparison_benchmarks.rs  loading_experiments.rs  lockfree_flip_benchmark.rs  memory_pressure_benchmarks.rs  parallel_merge_benchmarks.rs  per_node_log_benchmarks.rs  persistent_artrie_benchmarks.rs  persistent_artrie_char_benchmarks.rs  serialization_benchmarks.rs  transaction_benchmarks.rs  write_locality_benchmarks.rs
docs/algorithms/: README.md
docs/benchmarks/: c0-verify-featureoff.txt  c0-verify-featureon.txt  c1-build-featureoff.txt  c1-build-featureon.txt  c1-counter-doctest.txt  c1-dawg-core-handoff.md  c1-verify-featureoff.txt  c2-byte-merge-off.txt  c2-byte-newtests.txt  c2-char-build-on.txt  c2-char-merge-off.txt  c2-char-merge-on.txt  c2-char-newtests.txt  c2-doctx-build.txt  c2-doctx-newtests.txt  c2-doctx-off.txt  c2d-formal-gate.txt  c3-suffix-automaton-core-handoff.md  c4-scdawg-core-handoff.md  c5-dat-generic-handoff.md  d5-bincode-upgrade-handoff.md  dawg-union-verify.txt  deadlock-vocab-verify.txt  f2-char-increment.txt  f2-classification.md  f2-failure-details.txt  f2-featureoff-baseline.txt  f2-featureoff-failures.txt  f2-featureoff-final2.txt  f2-featureon-final.txt  f2-featureon-final2.txt  f2-featureon-pass2.txt  f2-final-both.txt  f2-flag1-off.txt  f2-flag1-writetests.txt  f2-flag2-off.txt  f2-flag2-on.txt  f2-increment-off.txt  f2-increment-on.txt  f2-migrate-baseline.txt  (+100 more)
docs/design/: L3.3c-C2-byte-deletion-inventory.md  L3.3c-C2-char-deletion-inventory.md  arbitrary-v-overlay-genericization.md  byte-flip-design.md  byte-flip-reachability-audit.md  byte-m4-flip-design.md  byte-m4a-artnode-value-serialization.patch  checkpoint-record-lsn-watermark-gap-49-design-2026-06-08.md  counter-u64-execution-spec.md  counter-u64-restoration.md  cx-task43-codec-design-2026-06-08.md  cx-task43-state-mapping-2026-06-08.md  deep-term-iterative-overlay.md  dg-recon-commitseq-stamp-seed-step.md  durable-global-commit-sequence-redesign-d2.5.md  durable-global-commit-sequence-redesign-d2.6.md  durable-global-commit-sequence-redesign-d2.7.md  durable-global-commit-sequence-redesign-d2.8.md  durable-global-commit-sequence-redesign-d2.md  durable-global-commit-sequence-redesign.md  dynamic-dawg.md  empty-string-value-support.md  f0-hack-fixes.md  f0-working-tree-recovery.patch  f4-lock-collapse-implementation.md  f7-eviction-completion-plan.md  f7-execution-revalidated.md  f7-overlay-eviction-production.md  f7-overlay-eviction-v4-design.md  f7-owned-to-overlay-rotation.md  f7-rotation-impl-ledger.md  g4-eviction-on-immutable-checkpoint.md  g4-overlay-eviction-reclamation-benchmark.md  g4-unify-overlay-node.md  g5-overlay-fault-in-on-read.md  lockfree-cas-artrie.md  lockfree-flip-irreversible.md  (+39 more)
examples/: batched_merge_comparison.rs  bench_disk_io.rs  exp_checkpoint_throughput.rs  insert_trace.rs  massif_overlay_eviction.rs  prefix_diversity_test.rs  streaming_merge_test.rs  test_bench.rs  test_bench_large.rs  test_checkpoint_debug.rs  wal_compare.rs  wal_debug.rs  wal_flush_debug.rs  wal_size_test.rs
formal-verification/: GAP_LEDGER.md  README.md  UNSAFE_BOUNDARY.md  UNSAFE_CONTRACTS.tsv  UNSAFE_INVENTORY.tsv  VERIFICATION_RESULTS.md
proto/: libdictenstein.proto
scripts/: f6-unpin-compact-tests.raku  run-sanitizers.sh  verify-formal-correspondence.sh  verify-unsafe-boundary-inventory.sh
src/: artrie_trait.rs  bloom_filter.rs  char_unit.rs  dawg_core.rs  difference_zipper.rs  double_array_trie.rs  double_array_trie_char.rs  double_array_trie_char_zipper.rs  double_array_trie_zipper.rs  dynamic_dawg.rs  dynamic_dawg_char.rs  dynamic_dawg_char_zipper.rs  dynamic_dawg_u64.rs  dynamic_dawg_u64_zipper.rs  dynamic_dawg_zipper.rs  excluding_prefix_zipper.rs  factory.rs  intersection_zipper.rs  iterator.rs  lib.rs  node_signature.rs  pathmap.rs  pathmap_char.rs  pathmap_zipper.rs  prefix_zipper.rs  scdawg.rs  scdawg_char.rs  substring.rs  suffix_automaton.rs  suffix_automaton_char.rs  suffix_automaton_char_zipper.rs  suffix_automaton_zipper.rs  symmetric_difference_zipper.rs  sync_compat.rs  union_zipper.rs  value.rs  value_diff_zipper.rs  zipper.rs
src/bijective/: mod.rs  (+2 more)
tests/: arena_manager_correspondence.rs  bijective_tests.rs  bijective_trait_invariant.rs  bloom_filter_correspondence.rs  checkpoint_retention_correspondence.rs  compaction_tests.rs  concurrent_checkpoint_publication_correspondence.rs  dedup_arena_correspondence.rs  dictionary_iterator_tests.rs  dictionary_law_correspondence.rs  dictionary_node_reopen_traversal_correspondence.rs  dirty_checkpoint_correspondence.rs  double_array_trie_correspondence.rs  dynamic_dawg_mutation_correspondence.rs  dynamic_dawg_u64_correspondence.rs  epoch_checkpoint_recovery_correspondence.rs  excluding_prefix_zipper_tests.rs  fuzzy_candidate_coverage_correspondence.rs  io_uring_integration_tests.rs  overlay_eviction_arbitrary_v_bug46.rs  pathmap_factory_correspondence.rs  pathmap_snapshot_tests.rs  persistent_arbitrary_v_overlay.rs  persistent_artrie_acid_tests.rs  persistent_artrie_char_e1_readflip_correspondence.rs  persistent_artrie_char_integration.rs  persistent_artrie_concurrent.rs  persistent_artrie_error_handling.rs  persistent_artrie_formal_correspondence.rs  persistent_artrie_loom_correspondence.rs  persistent_artrie_proptest.rs  persistent_artrie_recovery_tests.rs  persistent_artrie_storage_correspondence.rs  persistent_artrie_stress.rs  persistent_bulk_mutation_correspondence.rs  persistent_byte_thread_lifecycle.rs  persistent_char_ebr_correspondence.rs  persistent_char_eviction_correspondence.rs  persistent_char_eviction_proptest.rs  persistent_char_eviction_registry_correspondence.rs  (+60 more)
(+605 files in other folders)
