[package]
name = "libdictenstein"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Dylon Edwards <dylon.devo@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/f1r3fly-io/libdictenstein"
description = "High-performance dictionary backends (trie, DAWG, double-array trie, suffix automaton, persistent ART) for fuzzy string matching"
keywords = ["trie", "dawg", "dictionary", "fuzzy-search", "automata"]
categories = ["algorithms", "data-structures", "text-processing"]
readme = "README.md"

[dependencies]
# Logging facade
log = "0.4"
# SmallVec for stack-allocated vectors (performance optimization)
smallvec = { version = "1.13", features = ["serde"] }
# Fast non-cryptographic hashing for internal use
rustc-hash = "1.1"
# Lock-free atomic Arc swapping for DynamicDawgU64
arc-swap = "1.7"
# Error handling
thiserror = "2.0"
# Faster RwLock for DynamicDawg
parking_lot = { version = "0.12", optional = true }
# Serialization support (optional)
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }

# Compression support (optional)
flate2 = { version = "1.0", optional = true }

# Protobuf support (optional)
prost = { version = "0.13", optional = true }

# PathMap as an optional dictionary backend
pathmap = { version = "0.2.0-alpha0", optional = true }

# Memory-mapped I/O for persistent data structures
memmap2 = { version = "0.9", optional = true }

# Lock-free MPMC channels for group commit
crossbeam-channel = { version = "0.5", optional = true }

# Cross-platform system information (memory, CPU, etc.)
sysinfo = { version = "0.37", optional = true }

# Parallel processing for merge operations
rayon = { version = "1.10", optional = true }

# Fast non-cryptographic hashing for node deduplication
xxhash-rust = { version = "0.8", features = ["xxh3"], optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
proptest = "1.4"

[features]
default = ["parking_lot"]
pathmap-backend = ["pathmap"]
serialization = ["serde", "bincode", "serde_json"]
compression = ["flate2"]
protobuf = ["prost", "prost-build"]
# Persistent Adaptive Radix Trie (disk-based dictionary)
persistent-artrie = ["memmap2", "parking_lot", "serde", "bincode", "sysinfo", "xxhash-rust"]
# Group commit for WAL batching (REJECTED: causes regression on NVMe, useful for slower storage)
group-commit = ["persistent-artrie", "crossbeam-channel"]
# Parallel merge using rayon for multi-core acceleration
parallel-merge = ["persistent-artrie", "rayon"]
# SIMD optimization with AVX2/SSE4.1 intrinsics
simd = []
# SCDAWG optimization experiments
scdawg-bloom = []  # 64-bit bloom filter for edge lookup fast-reject
scdawg-simd = []   # SIMD edge lookup for small edge counts

[lib]
name = "libdictenstein"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[[bench]]
name = "serialization_benchmarks"
harness = false
required-features = ["serialization", "pathmap-backend"]

[[bench]]
name = "persistent_artrie_benchmarks"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "persistent_artrie_char_benchmarks"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "loading_experiments"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "epoch_benchmarks"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "group_commit_benchmarks"
harness = false
required-features = ["group-commit"]

[[bench]]
name = "memory_pressure_benchmarks"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "adaptive_pool_benchmarks"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "per_node_log_benchmarks"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "batch_wal_benchmarks"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "write_locality_benchmarks"
harness = false
required-features = ["persistent-artrie"]

[[bench]]
name = "parallel_merge_benchmarks"
harness = false
required-features = ["parallel-merge"]

[[bench]]
name = "transaction_benchmarks"
harness = false
required-features = ["persistent-artrie"]
